2007-09-15  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: 	replace all direct references to compiler by ${CC} to
			enable CC overriding at configure & make time; run
			check for visibility "hidden" with all compilers;
			quoting fixes from TEA tcl.m4.
	(SunOS-5.1x):	replace direct use of '/usr/ccs/bin/ld' in SHLIB_LD by
			'cc' compiler driver.
	* unix/configure: autoconf-2.59

2007-09-14  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish-Common.xcconfig:		  enable Tcl DTrace support.
	* macosx/Wish.xcodeproj/project.pbxproj:

2007-09-12  Andreas Kupries  <andreask@activestate.com>

	* win/Makefile.in (install-binaries): Fixed missing brace in the
	* win/makefile.vc (install-binaries): generated package index file.
	  Note: unix/Makefile.in is good.

2007-09-11  Reinhard Max  <max@suse.de>

	* generic/tkImgGIF.c: Fixed a buffer overrun that got triggered by
	multi-frame interlaced GIFs that contain subsequent frames that
	are smaller than the first one.

	* tests/imgPhoto.test: Added a test for the above.

2007-09-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Revised calls to Tcl_InitStubs() and
	* generic/tkMain.c:	[package require Tcl] so that Tk Says What
	* generic/tkWindow.c:	It Means using the new facilties of [package]
	* library/tk.tcl:	in Tcl 8.5 about what version(s) of Tcl it
	* unix/Makefile.in:	is willing to work with.  [Bug 1578344].
	* win/Makefile.in:
	* win/makefile.vc:

2007-09-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/README: typo corrections [Bug 1788682]

2007-09-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Revise all Tcl_InitStubs() calls to restore
	* generic/tkMain.c:	the traditional practice that a Tk shared
	* generic/tkWindow.c:	library may [load] into a Tcl 8.5 interp at
	any patchlevel.	 This practice also matches the compile time checks
	of TCL_MAJOR_VERSION and TCL_MINOR_VERSION in tk.h.  [Bug 1723622]

2007-09-06  Don Porter  <dgp@users.sourceforge.net>
